force-app/main/default/objects/X7S_Assets__c/X7S_Assets__c.object-meta.xml
<CustomObject>
    <label>7S Asset</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>7S Assets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>7S Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>