force-app/main/default/objects/X7S_Assets__c/fields/IP_Installation_URL__c.field-meta.xml
<CustomField>
    <fullName>IP_Installation_URL__c</fullName>
    <formula>Asset__r.IP_Installation_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Installation URL</label>
    <type>Text</type>
</CustomField>