force-app/main/default/objects/X7S_Assets__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipName>X7S_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>