force-app/main/default/objects/X7S_Assets__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <formula>Asset__r.Project_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>