force-app/main/default/objects/X7S_Assets__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <formula>Asset__r.PurchaseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>