force-app/main/default/objects/X7S_Assets__c/fields/X7S_Asset__c.field-meta.xml
<CustomField>
    <fullName>X7S_Asset__c</fullName>
    <label>7S Asset</label>
    <type>TextArea</type>
</CustomField>