force-app/main/default/objects/X7S_Assets__c/listViews/Customers_with_Community_Activity.listView-meta.xml
<ListView>
    <fullName>Customers_with_Community_Activity</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Purchase_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Community Activity</value>
    </filters>
    <label>Customers with Community Activity</label>
</ListView>